// The Firmament project
// Copyright (c) 2011-2012 Malte Schwarzkopf <malte.schwarzkopf@cl.cam.ac.uk>
//
// StorageRegistrationMessage informs about the existence of a resource.

package firmament;

message StorageRegistrationMessage {
  required bytes uuid = 1; //Resource ID
  required string storage_interface = 2;
  optional bytes coordinator_uuid = 3 ; // Useful to have an indication of which coordinator this object store belongs to.
  optional bool peer = 4 ; // Hint for the storage engine whether should be added as a peer or not.
}
